# drim

./: Cargo.toml  example.env  notes.txt
.sqlx/: query-e27d82822e2083d242d550a5d8e4ec87b6c3d8497600a76e3cf63f13de2fcfe5.json
migrations/: 1000_initial.sql
old-src/: conf.rs  error.rs
old-src/db/: mod.rs  models.rs  sessions.rs
old-src/handlers/: login.rs  mod.rs  mod.rs~  routes.rs
sql/: 1.sql  galf.sql  ginsert.sql  gviews.sql  notes.txt  up.sql
src/: auth.rs  conf.rs  error.rs  main.rs  state.rs
src/db/: account.rs  migrate.sql  mod.rs  models.rs  sessions.rs  users.rs
src/handlers/: login.rs  mod.rs  render.rs  routes.rs  session.rs
src/routes/: auth.rs  mod.rs
src/routes/utils/: request.rs  response.rs
templates/: add_user.html  login.html
