[package]
name = "drim"
version = "0.1.0"
authors = ["sidju <contact@sidju.se>"]
edition = "2018"

[dependencies]
# Read in configuration from environment
dotenv = "0.15"
# Basic web serving
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "full"] }
warp = "0.2"
# Asynchronous database interaction
async-native-tls = { version = "0.3", default-features = false, features = [ "runtime-tokio" ] }
sqlx = { version = "0.2", default-features = false, features = ["runtime-tokio", "macros", "chrono", "postgres"] }
# Password hashing and verification
argonautica = { version = "0.2", features = ["serde"] }
# Html templating
askama = "0.9"
