[package]
name = "drim"
version = "0.1.0"
authors = ["sidju <contact@sidju.se>"]
edition = "2018"

[dependencies]
# Read in configuration from environment
dotenv = "0.15"
# Basic web serving
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "0.2", features = ["macros", "full"] }
warp = "0.2"
# Asynchronous database interaction
async-native-tls = { version = "0.3", default-features = false, features = [ "runtime-tokio" ] }
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "chrono", "postgres", "uuid"] }
uuid = "0.8" # Need to match sqlx
# Password hashing and verification
rust-argon2 = "0.8"
rand = "0.7.3"
base64 = "0.12.1"
argonautica = { version = "0.2", features = ["serde"] }
# Html templating
askama = "0.9"
# Form input validation
validator = "0.10"
validator_derive = "0.10"
# Form input deserialisation
serde = { version = "1.0", features = ["derive"] }
